Fix align in Image block, wrap Gutenbergeditor in center component, CMS styling

--- a/services/cms/src/styles/Gutenberg/editor-styles.scss
+++ b/services/cms/src/styles/Gutenberg/editor-styles.scss
@@ -2,6 +2,20 @@
   line-height: $editor-line-height;
   color: $gray-900;
 
+  // Image align right
+  .edit-post-visual-editor__post-title-wrapper > [data-align="right"],
+  .block-editor-block-list__layout.is-root-container > [data-align="right"] {
+    float: right;
+    margin-bottom: 0.5rem;
+  }
+
+  // Image align left
+  .edit-post-visual-editor__post-title-wrapper > [data-align="left"],
+  .block-editor-block-list__layout.is-root-container > [data-align="left"] {
+    float: left;
+    margin-bottom: 0.5rem;
+  }
+
   p {
     font-size: inherit;
     line-height: inherit;
